fix UI layout problem with long item names

--- a/assets/style.css
+++ b/assets/style.css
@@ -287,6 +287,10 @@ h4.dt-name,
     padding: 0;
     flex: 0 0 12.5%;
     overflow-x: hidden;
+    width: 0;
+        /* really! needed to keep the no-wrap item labels from forcing a
+         * a bigger width than the available space flex would otherwise
+         * give this column. */
 }
 
 .bank-item {
